--- a/ProjectSourceCode/views/pages/login.hbs
+++ b/ProjectSourceCode/views/pages/login.hbs
@@ -1,13 +1,15 @@
-<div class="d-flex flex-column mx-auto">
-    <h1>Login</h1>
-    <form method="post" action="/login">
-        <label for="username">Username</label> <br />
-        <input name="username" /><br />
-        <label for="password">Password</label> <br />
-        <input type="password" name="password" /><br />
-        <button class="btn btn-primary mt-2" type="submit">
-            Login
-        </button>
+<div style = "margin-left:25%; margin-right: 25%; margin-top: 5%; border: 1px solid; border-radius: 25px; padding: 2%; height: 50%">
+    {{> message}}
+    <h3>Login</h3>
+    <form action = "/login" method = "post">
+        <div class = "mb-2">
+            <label class = "form-label" for = "username">Username</label>
+            <input class = "form-control" name = "username" id = "username" type = "text">
+
+            <label class = "form-label" for = "password">Password</label>
+            <input class = "form-control" name = "password" id = "password" type = "password">
+        </div>
+        <button type = "submit" class = "btn btn-primary">Login</button>
+        <div class = "form-text">Don't have an account? <a href = "/register">Register</a></div>
     </form>
-    <p>Don't have an account yet? <a href="/register">Register</a> now</p>
 </div>
