--- a/ProjectSourceCode/views/pages/register.hbs
+++ b/ProjectSourceCode/views/pages/register.hbs
@@ -1,13 +1,14 @@
-<div class="d-flex flex-column mx-auto">
-    <h1>Register</h1>
-    <form method="post" action="/register">
-        <label for="username">Username</label> <br />
-        <input name="username" /><br />
-        <label for="password">Password</label> <br />
-        <input type="password" name="password" /><br />
-        <button class="btn btn-primary mt-2" type="submit">
-            Register
-        </button>
+<div style = "margin-left:25%; margin-right: 25%; margin-top: 5%; border: 1px solid; border-radius: 25px; padding: 2%; height: 50%">
+    <h3>Register</h3>
+    <form action = "/register" method = "post">
+        <div class = "mb-2">
+            <label class = "form-label" for = "username">Username</label>
+            <input class = "form-control" name = "username" id = "username" type = "text">
+
+            <label class = "form-label" for = "password">Password</label>
+            <input class = "form-control" name = "password" id = "password" type = "password">
+        </div>
+        <button type = "submit" class = "btn btn-primary">Register</button>
+        <div class = "form-text">Already have an account? <a href = "/login">Login</a></div>
     </form>
-    <p>Already have an account? <a href="/login">Login</a> now</p>
 </div>
