--- a/ProjectSourceCode/views/pages/logout.hbs
+++ b/ProjectSourceCode/views/pages/logout.hbs
@@ -1,3 +1,5 @@
-<div class = "container mt-1">
-    {{> message}}
+<div class = "shadow-lg p-4 rounded border bg-body" style = "margin: auto; width: 30%">
+    <h3>Log Out</h3>
+    <hr>
+    <p>You've have successfully logged out of your account. To access your closet and outfits, please log back in.</p>
 </div>
