--- a/ProjectSourceCode/views/pages/register.hbs
+++ b/ProjectSourceCode/views/pages/register.hbs
@@ -1,11 +1,11 @@
-<div class = "shadow-lg p-4 rounded border bg-body" style = "margin: auto; height: 60%; width: 50%">
+<div class = "shadow-lg p-4 rounded border bg-body" style = "margin: auto; width: 50%">
     <div>
         <h3>Register</h3>
     </div>
     <hr>
     <div>
         <form class = "needs-validation">
-            <div class = "mb-2">
+            <div class = "mb-3">
                 <div class = "row g-3 mb-2">
                     <div class = "col">
                         <label class = "form-label" for = "firstName">First Name</label>
