--- a/ProjectSourceCode/views/partials/head.hbs
+++ b/ProjectSourceCode/views/partials/head.hbs
@@ -14,4 +14,7 @@
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
 </head>
-<body class="h-100 d-flex flex-column">
+
+  <!-- Note: I added 50px padding to the top of body so that it wouldn't overlap with the navbar at top of all pages -Linh -->
+  <!-- Note: Add padding to left later if there are problems with sidebar overlap -->
+<body class="h-100 d-flex flex-column" style="padding-top:50px">
