--- a/ProjectSourceCode/views/partials/sidebar.hbs
+++ b/ProjectSourceCode/views/partials/sidebar.hbs
@@ -1,5 +1,5 @@
 {{!-- Note to self: the position-fixed in the class attribute below is to keep the sidebar sticky, can delete later if causing issues --}}
-<div class="d-flex flex-column flex-shrink-0 p-3 bg-light position-fixed" style="width: 280px; height:100%">
+<div class="d-flex flex-column flex-shrink-0 p-3 bg-light position-fixed" style="width: 280px; height:100%;">
     <ul class="nav nav-pills flex-column mb-auto">
       <li class="nav-item" style="font-size: 25px">
         <a href="/gallery" class="nav-link active" aria-current="page">
@@ -48,7 +48,7 @@
       </li>
     </ul>
     <hr>
-    <div class="dropdown" style="bottom: 0">
+    <div class="dropdown" style="bottom: 10%">
       <a href="#" class="d-flex align-items-center link-dark text-decoration-none dropdown-toggle" id="dropdownUser2" data-bs-toggle="dropdown" aria-expanded="false">
         <img src="https://github.com/mdo.png" alt="" width="32" height="32" class="rounded-circle me-2">
         <strong>mdo</strong>
