Added Register API

--- a/ProjectSourceCode/views/pages/register.hbs
+++ b/ProjectSourceCode/views/pages/register.hbs
@@ -4,7 +4,7 @@
     </div>
     <hr>
     <div>
-        <form class = "needs-validation">
+        <form class = "needs-validation" action = "/register" method = "post">
             <div class = "mb-3">
                 <div class = "row g-3 mb-2">
                     <div class = "col">
