Added Gallery Page

--- a/ProjectSourceCode/views/partials/navWithSearch.hbs
+++ b/ProjectSourceCode/views/partials/navWithSearch.hbs
@@ -1,11 +1,11 @@
 {{!-- Nav bar to include in the gallery view - this bar will include a search field --}}
 <nav class="navbar fixed-top navbar-light bg-light">
-  <div class="container-fluid justify-content-between bd-highlight">
-    <p>LookLoom Logo Here</p>
-    <h2>LookLoom</h2>
-    <form class="d-flex" style="">
-      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success" type="submit">Search</button>
+  <div class="container-fluid justify-content-left bd-highlight" style="height: 40px;">
+    <img src="../../public/img/LookLoom.png" alt="LookLoom">
+    <!-- <h2>LookLoom</h2> -->
+    <form class="d-flex container-fluid justify-content-center" style="max-width: 60%; margin: auto;">
+      <input class="form-control me-2" type="search" placeholder="Explore gallery..." aria-label="Search">
+      <button type="submit" name="button" class="btn" style="display: block; background-color: #0d6efd; color: white;">Search</button>
     </form>
   </div>
 </nav>
