--- a/ProjectSourceCode/views/partials/sidebar.hbs
+++ b/ProjectSourceCode/views/partials/sidebar.hbs
@@ -1,5 +1,5 @@
 {{!-- Note to self: the position-fixed in the class attribute below is to keep the sidebar sticky, can delete later if causing issues --}}
-<div class="d-flex flex-column flex-shrink-0 p-3 bg-light position-fixed" style="width: 280px; height:100%;">
+<div class="d-flex flex-column flex-shrink-0 p-3 bg-light position-fixed" style="width: 12.5%; height:100%;">
     <ul class="nav nav-pills flex-column mb-auto">
       <li class="nav-item" style="font-size: 25px">
         <a href="/gallery" class="nav-link active" aria-current="page">
