--- a/ProjectSourceCode/views/pages/gallery.hbs
+++ b/ProjectSourceCode/views/pages/gallery.hbs
@@ -1,1 +1,102 @@
-Gallery
+<!DOCTYPE html>
+<head>
+    <style>
+    .fixed-div {
+        position: fixed;
+        top: 56px;
+        left: 12.5%;
+        width: 87.5%;
+        height: 800px;
+        overflow-y: auto;
+        padding: 30px;
+        display: grid;
+        grid-template-columns: repeat(5, 1fr);
+        gap: 30px;
+    }
+    .card {
+        background-color: #f7f7f7;
+        border: none;
+        height: 300px;
+        width: 220px;
+        box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 1px 3px 0 rgba(0, 0, 0, 0.19);
+        transition: transform 0.3s ease-in-out;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+    .card:hover {
+        transform: scale(1.1);
+    }
+    .card-link {
+        text-decoration: none;
+    }
+    .card-img-top {
+        width: 100%;
+        height: 83%;
+        padding-bottom: 5%;
+        object-fit: cover;
+    }
+    .card-name h5 {
+        margin-left: 5%;
+        margin-bottom: 0;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        width: 90%;
+    }
+    .card-price p {
+        margin-left: 5%;
+        text-align: left;
+        color: rgb(90, 90, 90);
+    }
+    </style>
+</head>
+<body>
+    <div class="fixed-div hover">
+        <a href="https://www.amazon.com/Womens-Summer-Dresses-Hollow-Long-Sleeve/dp/B0B7RHC3V1" class="card-link">
+            <div class="card">
+                <img src="../../img/dress.jpg" alt="Card Image" class="card-img-top">
+                <div class="card-name">
+                    <h5>Women's Summer Dress</h5>
+                </div>
+                <div class="card-price">
+                    <p>$16.00</p>
+                </div>
+            </div>
+        </a>
+        <a href="https://www.amazon.com/Button-Double-Breasted-Business-Wedding/dp/B09VGM1P55" class="card-link">
+            <div class="card">
+                <img src="../../img/suit.jpg" alt="Card Image" class="card-img-top">
+                <div class="card-name">
+                    <h5>Wangyue Mens Suit</h5>
+                </div>
+                <div class="card-price">
+                    <p>$66.00</p>
+                </div>
+            </div>
+        </a>
+        <div class="card">Outfit</div>
+        <div class="card">Outfit</div>
+        <div class="card">Outfit</div>
+        <div class="card">Outfit</div>
+        <div class="card">Outfit</div>
+        <div class="card">Outfit</div>
+        <div class="card">Outfit</div>
+        <div class="card">Outfit</div>
+        <div class="card">Outfit</div>
+        <div class="card">Outfit</div>
+        <div class="card">Outfit</div>
+        <div class="card">Outfit</div>
+        <div class="card">Outfit</div>
+        <div class="card">Outfit</div>
+        <div class="card">Outfit</div>
+        <div class="card">Outfit</div>
+        <div class="card">Outfit</div>
+        <div class="card">Outfit</div>
+        <div class="card">Outfit</div>
+        <div class="card">Outfit</div>
+        <div class="card">Outfit</div>
+        <div class="card">Outfit</div>
+        <div class="card">Outfit</div>
+    </div>
+</body>
