--- a/ProjectSourceCode/views/pages/outfit.hbs
+++ b/ProjectSourceCode/views/pages/outfit.hbs
@@ -17,53 +17,63 @@
 </style>
 
 <div class="p-4 d-flex flex-col">
-    <table width="50%">
-        <tr>
-            <td> 
+    <div class="container text-left w-50 pt-0 p-4">
+        <div class="row  border border-3 rounded p-1 m-1">
+            <div class="col col-4">
                 <img 
                     src="https://freepngimg.com/thumb/beanie/136731-large-beanie-free-clipart-hq-thumb.png" 
                     alt="Beanie" 
                     class="item-image"> 
-            </td>
-            <td>Nordstorm Cashmere Beanie</td>
-        </tr>
-        <tr>
-            <td> 
+            </div>
+            <div class="col">
+                Nordstorm Cashmere Beanie
+            </div>
+        </div>
+        <div class="row border border-3 rounded p-1 m-1">
+            <div class="col col-4">
                 <img 
                     src="https://static.vecteezy.com/system/resources/thumbnails/008/534/694/small/oversized-t-shirt-mockup-cutout-file-png.png" 
                     alt="TShirt" 
                     class="item-image"> 
-            </td>
-            <td>White Cotton Tshirt</td>
-        </tr>
-        <tr>
-            <td> 
+            </div>
+            <div class="col">
+                White Cotton Tshirt
+            </div>
+        </div>
+        <div class="row border border-3 rounded p-1 m-1">
+            <div class="col col-4">
                 <img 
                     src="https://www.knotstandard.com/assets/images/products/2269-detail.png?202304204" 
                     alt="TShirt" 
                     class="item-image"> 
-            </td>
-            <td>White Cotton Tshirt</td>
-        </tr>
-        <tr>
-            <td> 
+            </div>
+            <div class="col">
+                Bomber Jacket
+            </div>
+        </div>
+        <div class="row border border-3 rounded p-1 m-1">
+            <div class="col col-4">
                 <img 
                     src="https://static.vecteezy.com/system/resources/previews/022/665/831/original/long-pants-with-cut-out-isolated-on-background-transparent-png.png" 
                     alt="Pants" 
                     class="item-image"> 
-            </td>
-            <td>Grey Pants or Something</td>
-        </tr>
-        <tr>
-            <td> 
+            </div>
+            <div class="col">
+                Grey Pants or Something
+            </div>
+        </div>
+        <div class="row border border-3 rounded p-1 m-1">
+            <div class="col col-4">
                 <img 
                     src="https://i.ebayimg.com/00/s/NTM3WDk3Mg==/z/b6QAAOSwetljWAFx/$_58.png" 
                     alt="Shoes" 
                     class="item-image"> 
-            </td>
-            <td>Nike AF1s</td>
-        </tr>
-    </table>
+            </div>
+            <div class="col">
+                Nike AF1's
+            </div>
+        </div>
+    </div>
     <div>
         <div class="d-flex flex-col justify-content-between w-full">
             <h1>A drippy fit</h1>
@@ -81,7 +91,7 @@
             <button>Edit Outfit</button>
             <button>Share Outfit</button>
         </div>
-        <div class="scrolling-wrapper">
+        {{!-- <div class="scrolling-wrapper">
             <div class="card"><h2>Card</h2></div>
             <div class="card"><h2>Card</h2></div>
             <div class="card"><h2>Card</h2></div>
@@ -91,6 +101,6 @@
             <div class="card"><h2>Card</h2></div>
             <div class="card"><h2>Card</h2></div>
             <div class="card"><h2>Card</h2></div>
-        </div>
+        </div> --}}
     </div> 
 </div>
