--- a/ProjectSourceCode/views/pages/register.hbs
+++ b/ProjectSourceCode/views/pages/register.hbs
@@ -1,4 +1,5 @@
 <div class = "shadow-lg p-4 rounded border bg-body" style = "margin: auto; width: 50%">
+    {{> message}}
     <div>
         <h3>Register</h3>
     </div>
