--- a/ProjectSourceCode/views/pages/gallery.hbs
+++ b/ProjectSourceCode/views/pages/gallery.hbs
@@ -29,14 +29,16 @@
     }
     .card-link {
         text-decoration: none;
+        height: 85%;
     }
     .card-img-top {
         width: 100%;
-        height: 83%;
+        height: 100%;
         padding-bottom: 5%;
         object-fit: cover;
     }
-    .card-name h5 {
+    .card-name h6 {
+        font-size: 18px;
         margin-left: 5%;
         margin-bottom: 0;
         white-space: nowrap;
@@ -45,7 +47,9 @@
         width: 90%;
     }
     .card-price p {
+        font-size: 14px;
         margin-left: 5%;
+        margin-bottom: 2px;
         text-align: left;
         color: rgb(90, 90, 90);
     }
@@ -53,33 +57,32 @@
 </head>
 <body>
     <div class="fixed-div hover">
-        <a href="https://www.amazon.com/Womens-Summer-Dresses-Hollow-Long-Sleeve/dp/B0B7RHC3V1" class="card-link">
-            <div class="card">
-                <img src="../../img/dress.jpg" alt="Card Image" class="card-img-top">
+        <div class="card">
+            <a href="https://www.amazon.com/Womens-Summer-Dresses-Hollow-Long-Sleeve/dp/B0B7RHC3V1" class="card-link">
+                <img id="image" src="../../img/dress.jpg" alt="Card Image" class="card-img-top">
+            </a>
+            <div class="card-info">
                 <div class="card-name">
-                    <h5>Women's Summer Dress</h5>
+                    <h6>Women's Summer Dress</h6>
                 </div>
                 <div class="card-price">
                     <p>$16.00</p>
                 </div>
             </div>
-        </a>
-        <a href="https://www.amazon.com/Button-Double-Breasted-Business-Wedding/dp/B09VGM1P55" class="card-link">
-            <div class="card">
-                <img src="../../img/suit.jpg" alt="Card Image" class="card-img-top">
+        </div>
+        <div class="card">
+            <a href="https://www.amazon.com/Button-Double-Breasted-Business-Wedding/dp/B09VGM1P55" class="card-link">
+                <img id="image" src="../../img/suit.jpg" alt="Card Image" class="card-img-top">
+            </a>
+            <div class="card-info">
                 <div class="card-name">
-                    <h5>Wangyue Mens Suit</h5>
+                    <h6>Wangyue Mens Suit</h6>
                 </div>
                 <div class="card-price">
                     <p>$66.00</p>
                 </div>
             </div>
-        </a>
-        <div class="card">Outfit</div>
-        <div class="card">Outfit</div>
-        <div class="card">Outfit</div>
-        <div class="card">Outfit</div>
-        <div class="card">Outfit</div>
+        </div>
         <div class="card">Outfit</div>
         <div class="card">Outfit</div>
         <div class="card">Outfit</div>
