--- a/ProjectSourceCode/views/pages/gallery.hbs
+++ b/ProjectSourceCode/views/pages/gallery.hbs
@@ -13,6 +13,7 @@
         grid-template-columns: repeat(5, 1fr);
         gap: 30px;
     }
+    /* Card styles */
     .card {
         background-color: #f7f7f7;
         border: none;
@@ -52,6 +53,40 @@
         margin-bottom: 2px;
         text-align: left;
         color: rgb(90, 90, 90);
+    }
+    /* Modal styles */
+    .modal {
+        display: none;
+        position: fixed;
+        z-index: 1;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        overflow: auto;
+        background-color: rgb(0,0,0);
+        background-color: rgba(0,0,0,0.4);
+    }
+    .modal-content {
+        top: -100px;
+        background-color: #fefefe;
+        margin: 15% auto;
+        padding: 20px;
+        border: 1px solid #888;
+        width: 40%;
+        height: 70%;
+    }
+    .close {
+        color: #aaa;
+        float: right;
+        font-size: 28px;
+        font-weight: bold;
+    }
+    .close:hover,
+    .close:focus {
+        color: black;
+        text-decoration: none;
+        cursor: pointer;
     }
     </style>
 </head>
@@ -101,5 +136,12 @@
         <div class="card">Outfit</div>
         <div class="card">Outfit</div>
         <div class="card">Outfit</div>
+        <div id="myModal" class="modal">
+            <div class="modal-content">
+                <span class="close">&times;</span>
+                <p>Some text in the Modal..</p>
+            </div>
+        </div>
     </div>
+    <script src="../../js/script.js"></script>
 </body>
