Updated Account Details link

--- a/ProjectSourceCode/views/partials/sidebar.hbs
+++ b/ProjectSourceCode/views/partials/sidebar.hbs
@@ -57,7 +57,7 @@
   </ul>
   <ul class="nav nav-pills flex-column ml-auto p-2" style="font-size: 20px;">
     <li class="nav-item">
-      <a href="/accountSettings" class="nav-link link-dark">
+      <a href="/accountDetails" class="nav-link link-dark">
         Account Settings
       </a>
     </li>
