--- a/ProjectSourceCode/views/partials/sidebar.hbs
+++ b/ProjectSourceCode/views/partials/sidebar.hbs
@@ -61,6 +61,12 @@
         Account Settings
       </a>
     </li>
-  </ul>
+  </ul>'<ul class="nav nav-pills flex-column ml-auto p-2" style="font-size: 15px;">
+    <li class="nav-item">
+      <a href="/logout" class="nav-link link-dark">
+        Log Out
+      </a>
+    </li>
+  </ul>'
   <hr />
 </div>
