--- a/ProjectSourceCode/views/pages/closet.hbs
+++ b/ProjectSourceCode/views/pages/closet.hbs
@@ -12,19 +12,52 @@
     />
 
     <style>
-      .fixed-div { position: fixed; top: 56px; left: 12.5%; width: 87.5%;
-      height: 800px; overflow-y: auto; padding: 30px; display: grid;
-      grid-template-columns: repeat(4, 1fr); gap: 30px; } .card {
-      background-color: #f7f7f7; border: none; height: 300px; width: 220px;
+      .fixed-div {
+      position: fixed; 
+      top: 56px; 
+      left: 12.5%; 
+      width: 87.5%;
+      height: 800px; 
+      overflow-y: auto; 
+      padding: 30px; 
+      display: grid;
+      grid-template-columns: repeat(4, 1fr); 
+      gap: 30px; 
+      } 
+      .card {
+      background-color: #f7f7f7;
+      border: none; height: 300px; 
+      width: 220px;
       box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 1px 3px 0 rgba(0, 0, 0,
-      0.19); transition: transform 0.3s ease-in-out; display: flex;
-      flex-direction: column; justify-content: space-between; } .card:hover {
-      transform: scale(1.1); } .card-name h5 { margin-left: 5%; margin-bottom:
-      0; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; width:
-      90%; font-size: 1rem; line-height: 1.2; } .card-price p { margin-left: 5%;
-      text-align: left; color: rgb(90, 90, 90); font-size: 0.8rem; }
-      .card-img-top { width: 100%; height: 83%; padding-bottom: 5%; object-fit:
-      cover; }
+      0.19); 
+      transition: transform 0.3s ease-in-out; 
+      display: flex;
+      flex-direction: column; 
+      justify-content: space-between; 
+      } 
+      .card:hover {     
+      transform: scale(1.1); 
+      } 
+      .card-name h5 { 
+      margin-left: 5%; 
+      margin-bottom:0; 
+      white-space: nowrap; 
+      overflow: hidden; 
+      text-overflow: ellipsis; 
+      width:90%; 
+      font-size: 1rem; 
+      line-height: 1.2; 
+      } 
+      .card-price p { margin-left: 5%;
+      text-align: left; 
+      color: rgb(90, 90, 90); 
+      font-size: 0.8rem; }      
+      .card-img-top { 
+      width: 100%; 
+      height: 83%; 
+      padding-bottom: 5%; 
+      object-fit:cover; 
+      }
     </style>
   </head>
 
