--- a/ProjectSourceCode/views/pages/gallery.hbs
+++ b/ProjectSourceCode/views/pages/gallery.hbs
@@ -13,7 +13,6 @@
         grid-template-columns: repeat(5, 1fr);
         gap: 30px;
     }
-    /* Card styles */
     .card {
         background-color: #f7f7f7;
         border: none;
@@ -30,16 +29,14 @@
     }
     .card-link {
         text-decoration: none;
-        height: 85%;
     }
     .card-img-top {
         width: 100%;
-        height: 100%;
+        height: 83%;
         padding-bottom: 5%;
         object-fit: cover;
     }
-    .card-name h6 {
-        font-size: 18px;
+    .card-name h5 {
         margin-left: 5%;
         margin-bottom: 0;
         white-space: nowrap;
@@ -48,76 +45,41 @@
         width: 90%;
     }
     .card-price p {
-        font-size: 14px;
         margin-left: 5%;
-        margin-bottom: 2px;
         text-align: left;
         color: rgb(90, 90, 90);
-    }
-    /* Modal styles */
-    .modal {
-        display: none;
-        position: fixed;
-        z-index: 1;
-        left: 0;
-        top: 0;
-        width: 100%;
-        height: 100%;
-        overflow: auto;
-        background-color: rgb(0,0,0);
-        background-color: rgba(0,0,0,0.4);
-    }
-    .modal-content {
-        top: -100px;
-        background-color: #fefefe;
-        margin: 15% auto;
-        padding: 20px;
-        border: 1px solid #888;
-        width: 40%;
-        height: 70%;
-    }
-    .close {
-        color: #aaa;
-        float: right;
-        font-size: 28px;
-        font-weight: bold;
-    }
-    .close:hover,
-    .close:focus {
-        color: black;
-        text-decoration: none;
-        cursor: pointer;
     }
     </style>
 </head>
 <body>
     <div class="fixed-div hover">
-        <div class="card">
-            <a href="https://www.amazon.com/Womens-Summer-Dresses-Hollow-Long-Sleeve/dp/B0B7RHC3V1" class="card-link">
-                <img id="image" src="../../img/dress.jpg" alt="Card Image" class="card-img-top">
-            </a>
-            <div class="card-info">
+        <a href="https://www.amazon.com/Womens-Summer-Dresses-Hollow-Long-Sleeve/dp/B0B7RHC3V1" class="card-link">
+            <div class="card">
+                <img src="../../img/dress.jpg" alt="Card Image" class="card-img-top">
                 <div class="card-name">
-                    <h6>Women's Summer Dress</h6>
+                    <h5>Women's Summer Dress</h5>
                 </div>
                 <div class="card-price">
                     <p>$16.00</p>
                 </div>
             </div>
-        </div>
-        <div class="card">
-            <a href="https://www.amazon.com/Button-Double-Breasted-Business-Wedding/dp/B09VGM1P55" class="card-link">
-                <img id="image" src="../../img/suit.jpg" alt="Card Image" class="card-img-top">
-            </a>
-            <div class="card-info">
+        </a>
+        <a href="https://www.amazon.com/Button-Double-Breasted-Business-Wedding/dp/B09VGM1P55" class="card-link">
+            <div class="card">
+                <img src="../../img/suit.jpg" alt="Card Image" class="card-img-top">
                 <div class="card-name">
-                    <h6>Wangyue Mens Suit</h6>
+                    <h5>Wangyue Mens Suit</h5>
                 </div>
                 <div class="card-price">
                     <p>$66.00</p>
                 </div>
             </div>
-        </div>
+        </a>
+        <div class="card">Outfit</div>
+        <div class="card">Outfit</div>
+        <div class="card">Outfit</div>
+        <div class="card">Outfit</div>
+        <div class="card">Outfit</div>
         <div class="card">Outfit</div>
         <div class="card">Outfit</div>
         <div class="card">Outfit</div>
