--- a/ProjectSourceCode/views/pages/closet.hbs
+++ b/ProjectSourceCode/views/pages/closet.hbs
@@ -29,41 +29,59 @@
   </head>
 
   <!-- Add Your Modal -->
-  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal fade" id="Modal" tabindex="-1" aria-labelledby="ModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Add Your Own Item</h5>
+          <h5 class="modal-title" id="ModalLabel">Add Your Own Item</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-          <form class = "needs-validation" action = "/" method = "post">
-            <label class = "form-label" for = "item_name">Item Name</label>
-            <input class = "form-control" name = "item_name" id = "item_name" type = "text" placeholder="">
+          <form class = "needs-validation" action = "/closet/addYourOwn" method = "post">
+            <div class = "mb-3">
+              <label class = "form-label" for = "item_name">Item Name</label>
+              <input class = "form-control" name = "item_name" id = "item_name" type = "text" placeholder="" required>
 
-            <label class = "form-label" for = "price">Price</label>
-            <input class = "form-control" name = "price" id = "price" type = "number" placeholder="">
+              <label class = "form-label" for = "brand">Brand</label>
+              <input class = "form-control" name = "brand" id = "brand" type = "text" placeholder="">
 
-            <label class = "form-label" for = "description">Description</label>
-            <input class = "form-control" name = "description" id = "description" type = "number" placeholder="">
+              <label class = "form-label" for = "price">Price</label>
+              <input class = "form-control" name = "price" id = "price" type = "number" placeholder="">
 
-            <label class = "form-label" for = "image_url">Image URL</label>
-            <input class = "form-control" name = "image_url" id = "image_url" type = "url" placeholder="" required>
+              <label class = "form-label" for = "description">Description</label>
+              <input class = "form-control" name = "description" id = "description" type = "text" placeholder="">
 
-            <label class = "form-label" for = "website_url">Website Link</label>
-            <input class = "form-control" name = "website_url" id = "website_url" type = "url" placeholder="" required>
+              <label class = "form-label" for = "image_url">Image URL</label>
+              <input class = "form-control" name = "image_url" id = "image_url" type = "url" placeholder="" required>
+
+              <label class = "form-label" for = "website_url">Website Link</label>
+              <input class = "form-control" name = "website_url" id = "website_url" type = "url" placeholder="">
+
+              <label class = "form-label" for = "categories">Categories</label>
+              <select name = "categories" id = "categories" class="form-select" aria-label="Default select example">
+                <option disabled selected>Select one...</option>
+                <option value="Tops">Tops</option>
+                <option value="Bottoms">Bottoms</option>
+                <option value="Dresses">Dresses</option>
+                <option value="Shoes">Shoes</option>
+                <option value="Accessories">Accesories</option>
+              </select>
+            </div>
+
+            <button type="submit" class="btn btn-primary">Add Item</button>
           </form>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
         </div>
       </div>
     </div>
   </div>
 
   <body>
-
+    <div>
+      {{> message}}
+    </div>
     <div class="container-fluid p-0">
       <div class="row">
         <div class="col-md-3">
@@ -73,7 +91,7 @@
           <div class="fixed-div">
 
             <!-- Button to Add Item -->
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#Modal">
               Add Your Own Item
             </button>
             
