--- a/ProjectSourceCode/views/pages/closet.hbs
+++ b/ProjectSourceCode/views/pages/closet.hbs
@@ -91,8 +91,8 @@
               <input class = "form-control" name = "website_url" id = "website_url" type = "url" placeholder="">
 
               <label class = "form-label" for = "categories">Categories</label>
-              <select name = "categories" id = "categories" class="form-select" aria-label="Default select example">
-                <option disabled selected>Select one...</option>
+              <select name = "categories" id = "categories" class="form-select" aria-label="Default select example" required>
+                <option selected disabled value="">Select one...</option>
                 <option value="Tops">Tops</option>
                 <option value="Bottoms">Bottoms</option>
                 <option value="Dresses">Dresses</option>
@@ -102,10 +102,8 @@
             </div>
 
             <button type="submit" class="btn btn-primary">Add Item</button>
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
           </form>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
         </div>
       </div>
     </div>
