--- a/ProjectSourceCode/views/pages/outfits.hbs
+++ b/ProjectSourceCode/views/pages/outfits.hbs
@@ -2,7 +2,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Closet</title>
+    <title>Outfits</title>
     <!-- Add Bootstrap CSS CDN -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
