--- a/ProjectSourceCode/views/pages/closet.hbs
+++ b/ProjectSourceCode/views/pages/closet.hbs
@@ -21,12 +21,13 @@
       overflow-y: auto; 
       padding: 30px; 
       display: grid;
-      grid-template-columns: repeat(4, 1fr); 
+      grid-template-columns: repeat(5, 1fr); 
       gap: 30px; 
       } 
       .card {
       background-color: #f7f7f7;
-      border: none; height: 300px; 
+      border: none;
+      height: 600px; 
       width: 220px;
       box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 1px 3px 0 rgba(0, 0, 0,
       0.19); 
@@ -128,13 +129,13 @@
           <div class="fixed-div">
 
             <!-- Button to Add Item -->
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#Modal">
+            <button type="button" class="col-md-4 btn btn-primary" style="width: 220px;" data-bs-toggle="modal" data-bs-target="#Modal">
               Add Your Own Item
             </button>
             
             {{#each items}}
               <div class="col-md-4">
-                <div class="card h-100">
+                <div class="card">
                   <img
                     src="{{this.image_url}}"
                     class="card-img-top"
