--- a/ProjectSourceCode/views/pages/outfits.hbs
+++ b/ProjectSourceCode/views/pages/outfits.hbs
@@ -75,7 +75,7 @@
             
             {{#each outfits}}
               <div class="col-md-4">
-                <div class="card h-100">
+                <div class="card">
                   <img
                     src="{{this.image_url}}"
                     class="card-img-top"
