--- a/ProjectSourceCode/views/pages/closet.hbs
+++ b/ProjectSourceCode/views/pages/closet.hbs
@@ -55,7 +55,7 @@
       font-size: 0.8rem; }      
       .card-img-top { 
       width: 100%; 
-      height: 83%; 
+      height: 350px; 
       padding-bottom: 5%; 
       object-fit:cover; 
 
