--- a/ProjectSourceCode/views/pages/gallery.hbs
+++ b/ProjectSourceCode/views/pages/gallery.hbs
@@ -8,7 +8,7 @@
         top: 56px;
         left: 12.5%;
         width: 87.5%;
-        height: 500px;
+        height: 100%;
         overflow-y: auto;
         padding: 30px;
         display: grid;
@@ -34,7 +34,7 @@
     }
     .card-img-top {
         width: 100%;
-        height: 300px;
+        height: 350px;
         padding-bottom: 5%;
         object-fit: cover;
     }
@@ -58,10 +58,10 @@
       {{> message}}
     </div>
     <div class="fixed-div hover">
-        {{#each items}}
+        {{#each amazonItems}}
         <div class="card">
-            <a href="{{this.link}}" class="card-link">
-                <img id="image" src="{{this.image_url}}" alt="Card Image" class="card-img-top">
+            <a href="{{this.url}}" class="card-link">
+                <img id="image" src="{{this.image}}" alt="Card Image" class="card-img-top">
             </a>
             <div class="card-info">
                 <div class="card-name">
@@ -130,5 +130,6 @@
         </div>
     </div>
     <script src="../../js/galleryScript.js"></script>
+    <script src="../../js/search.js"></script>
 </body>
 </html>
