added LookLoom logo

--- a/ProjectSourceCode/views/layouts/main.hbs
+++ b/ProjectSourceCode/views/layouts/main.hbs
@@ -2,7 +2,7 @@
 {{> head}}
 <!-- TODO: Add the nav.hbs partial here -->
 
-<!-- I put the search nav bar here for now, need to add if/else statements later for whether we're on gallery or scloset view -Linh -->
+<!-- I put the search nav bar here for now, need to add if/else statements later for whether we're on gallery or closet view -Linh -->
 {{> navWithSearch}}
 {{> sidebar}}
 {{{body}}}
