--- a/ProjectSourceCode/views/partials/navNoSearch.hbs
+++ b/ProjectSourceCode/views/partials/navNoSearch.hbs
@@ -1,6 +1,10 @@
 <nav class="navbar fixed-top navbar-light bg-light">
   <div class="container-fluid justify-content-center bd-highlight">
-    <p>LookLoom Logo Here</p>
+    <img
+      src="../../img/LookLoom.jpg"
+      alt="LookLoomLogo"
+      height="30px"
+    />
     <h2>LookLoom</h2>
   </div>
 </nav>
