--- a/ProjectSourceCode/views/partials/navWithSearch.hbs
+++ b/ProjectSourceCode/views/partials/navWithSearch.hbs
@@ -1,7 +1,11 @@
 {{!-- Nav bar to include in the gallery view - this bar will include a search field --}}
 <nav class="navbar fixed-top navbar-light bg-light">
   <div class="container-fluid justify-content-left bd-highlight" style="height: 40px;">
-    <img src="../../public/img/LookLoom.png" alt="LookLoom">
+    <img
+      src="../../img/LookLoom.jpg"
+      alt="LookLoomLogo"
+      height="30px"
+    />
     <!-- <h2>LookLoom</h2> -->
     <form class="d-flex container-fluid justify-content-center" style="max-width: 60%; margin: auto;" id="searchForm" action="/gallery/search" method="get">
       <input class="form-control me-2" type="text" id="searchInput" name="q" placeholder="Explore gallery...">
