--- a/ProjectSourceCode/views/partials/head.hbs
+++ b/ProjectSourceCode/views/partials/head.hbs
@@ -13,6 +13,18 @@
 
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
+      <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+      <script>
+          $(function(){
+              $('a').each(function(){
+                  if ($(this).prop('href') == window.location.href) {
+                      $(this).addClass('active'); $(this).parents('li').addClass('active'); 
+                      $(this).classList.remove('link-dark');
+                      $(this).addClass('link-light');
+                  }
+              });
+          });
+      </script>
 </head>
 
   <!-- Note: I added 50px padding to the top of body so that it wouldn't overlap with the navbar at top of all pages -Linh -->
