--- a/ProjectSourceCode/views/partials/message.hbs
+++ b/ProjectSourceCode/views/partials/message.hbs
@@ -1,5 +1,5 @@
 {{#if message}}
-  <div class="alert alert-{{#if error}}danger{{else}}success{{/if}}" role="alert">
+  <div id="message" class="alert alert-dismissible alert-{{#if error}}danger{{else}}success{{/if}}" role="alert">
     {{ message }}
   </div>
 {{/if}}
