--- a/ProjectSourceCode/views/partials/sidebar.hbs
+++ b/ProjectSourceCode/views/partials/sidebar.hbs
@@ -5,7 +5,7 @@
 >
   <ul class="nav nav-pills flex-column mb-auto">
     <li class="nav-item" style="font-size: 25px">
-      <a href="/gallery" class="nav-link active" aria-current="page">
+      <a href="/gallery" class="nav-link link-dark" aria-current="page">
         Gallery
       </a>
     </li>
