Added a few tests, inserted user info, slight fixes to 'Add Your Own' feature

--- a/ProjectSourceCode/views/pages/closet.hbs
+++ b/ProjectSourceCode/views/pages/closet.hbs
@@ -93,7 +93,7 @@
               <input class = "form-control" name = "brand" id = "brand" type = "text" placeholder="">
 
               <label class = "form-label" for = "price">Price</label>
-              <input class = "form-control" name = "price" id = "price" type = "number" placeholder="">
+              <input class = "form-control" name = "price" id = "price" type = "number" placeholder="" required>
 
               <label class = "form-label" for = "description">Description</label>
               <input class = "form-control" name = "description" id = "description" type = "text" placeholder="">
